--- a/styles/global.css
+++ b/styles/global.css
@@ -15,9 +15,9 @@
 
   --font-family: "Poppins", sans-serif;
   --text-lg: bold 32px/125% var(--font-family);
-  --text-md: bold 14px/170% var(--font-family);
-  --text-sm: bold 12px/170% var(--font-family);
-  --text: 16px/1.5 var(--font-family)
+  --text-md: 14px/170% var(--font-family);
+  --text-sm: 12px/170% var(--font-family);
+  --text: 16px/1.5 var(--font-family);
 }
 
 body {
